Fix card text container gap

--- a/media/css/firefox/landing/kit.scss
+++ b/media/css/firefox/landing/kit.scss
@@ -282,7 +282,7 @@ main {
 .c-gallery-card-text-container {
     grid-column: text;
     display: grid;
-    gap: 30px;
+    gap: 24px;
     justify-items: start;
     font-size: var(--font-size-body-medium);
 
